deploy/manifests/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: cutto
  labels:
    service: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      service: worker
  template:
    metadata:
      labels:
        service: worker
    spec:
      containers:
        - name: worker
          image: registry.gitlab.com/klavionik/cutto/backend:v1.0.8
          command:
            - python
            - -m
            - celery
            - --app
            - project
            - worker
            - --beat
            - --scheduler
            - django
