deploy/manifests/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      service: backend
  template:
    metadata:
      labels:
        service: backend
    spec:
      containers:
          - name: backend
            image: registry.gitlab.com/klavionik/cutto/backend:v1.0.11
            command:
              - "gunicorn"
              - "--bind"
              - "0.0.0.0:8000"
              - "--workers"
              - "3"
              - "--capture-output"
              - "--access-logfile"
              - "-"
              - "project.wsgi:application"
            ports:
              - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  ports:
    - name: http
      port: 8000
      targetPort: 8000
  selector:
    service: backend
