deploy/manifests/broker.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: broker
spec:
  serviceName: broker
  replicas: 1
  selector:
    matchLabels:
      service: broker
  template:
    metadata:
      labels:
        service: broker
    spec:
      containers:
        - image: rabbitmq:3.8-alpine
          name: broker
          ports:
            - containerPort: 5672
---
apiVersion: v1
kind: Service
metadata:
  name: broker
  namespace: cutto
spec:
  selector:
    service: broker
  ports:
    - port: 5672
