deploy/manifests/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      service: frontend
  template:
    metadata:
      labels:
        service: frontend
    spec:
      containers:
        - name: frontend
          image: registry.gitlab.com/klavionik/cutto/frontend:v1.0.10
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /data
              name: caddy
              subPath: data
            - mountPath: /config
              name: caddy
              subPath: config
      volumes:
        - name: caddy
          persistentVolumeClaim:
            claimName: caddy
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    service: frontend
